--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Example Based Machine Translation using Fuzzy Logic</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
 <!--     <link ... href="{{ url_for('static', filename='stylesheets/style.css') }}" />
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand text-center" href="#page-top">&nbsp&nbsp&nbsp&nbsp Language Translation Using Machine Learning Algorithm</a>
+                <a class="navbar-brand text-center" href="#page-top">&nbsp; &nbsp; Example Based Machine Translation using Fuzzy Logic</a>
             </div>
 
             
@@ -93,14 +93,14 @@
   <br><br><br>
 </div>
 
-
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-below">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; CloudClovis.com
+                        Example Based Machine Translation using Fuzzy Logic
                     </div>
                 </div>
             </div>
