UI modifications done

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,7 @@
 
       <div class="form-group">
 		<label for="input">Input Text:</label>
+        <p>Input language detected: {{input_detected}}</p>
         <!-- <input type="text" class="form-control" name="input"/><br/> -->
 		<textarea class="form-control" rows="15" id="comment" name="inputtext">{{name}}</textarea>
 	  </div>    
@@ -84,6 +85,7 @@
       <br><br><br>
       <div class="form-group">
 		<label for="comment">Output Text:</label>
+        <p>Output language detected: {{output_detected}}</p>
 		<textarea class="form-control" rows="15" id="comment">{{translated}}</textarea>
 	  </div> 
     </div>
